crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_node_in_alternation.txt
[(a) (b
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:6
  |
1 | [(a) (b
  |      -^
  |      |
  |      node started here
  |
help: add `)` to close the node
